# os-course-24y-diy-page-cache-simple-cmake-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  formatter.bat  linter.bat  report.md  test_file.txt  Отчет.docx
.devcontainer/: Dockerfile.cpp-dev-env  devcontainer.json
.github/workflows/: pull-request.yaml
LoadGenerators/LoadGeneratorCustomCached/: CMakeLists.txt  NumbersGenerator.py
LoadGenerators/LoadGeneratorCustomCached/include/: TapeManager.h
LoadGenerators/LoadGeneratorCustomCached/src/: MinHeap.cpp  Sorter.cpp  TapeManager.cpp
LoadGenerators/LoadGeneratorOriginal/: CMakeLists.txt
SecondChanceCache/: API.cpp  API.h  CMakeLists.txt  SecondChanceCache.cpp  SecondChanceCache.h
app/: CMakeLists.txt  README.md  app.c  app.cpp  app.h  app_opt.c  app_opt.h  app_with_cache.cpp  app_without_cache.cpp  bench1.cpp  bench_no_cache.cpp  block_cache.cpp  cache.cpp  cache.h  cache.hpp  combined.cpp  combined.hpp  create_bin  create_bin.c  dedup.cpp  dedup.hpp  ema-search-int.cpp  ema-search-int.h  ema_search_int.cpp  ema_search_int.hpp  lab2.cpp  lab2.h  test.cpp  with_cache  with_cache.c  with_cache_new  with_opt_cache  with_opt_cache_inc  with_page_cache  without_cache  without_cache.c
benchmark/: CMakeLists.txt  benchmarks.cpp
blockcache/: CMakeLists.txt  blockcache.c
cmake/: ClangFormat.cmake  ClangTidy.cmake  CompileOptions.cmake
include/: FilesInterface.h  PageCache.h  block_cache.hpp  lab2.h
lib/include/: FilesInterface.h  PageCache.h
lib/src/: FilesInterface.cpp  PageCache.cpp
report/: README.md
source/: CMakeLists.txt
source/monolith/: cache.cpp  cache.h  cache_api.cpp  cache_api.h  io-thpt-read-mod.cpp  io-thpt-read.cpp  test-prefetching.cpp
source/page-cache/: CMakeLists.txt  page_cache.c  page_cache.h
source/page-cache-app/: CMakeLists.txt  main.c
src/: FilesInterface.cpp  PageCache.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
